# td-shim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
benchmark/: Cargo.toml
benchmark/src/: lib.rs
cc-measurement/: Cargo.toml
cc-measurement/src/: lib.rs  log.rs
devtools/: Dockerfile  Makefile
devtools/td-benchmark/: Cargo.toml
devtools/td-benchmark/src/: benchmark.rs  heap.rs  lib.rs  stack.rs
doc/: cargo-deny.md  design-for-payload.md  design.md  fuzzing.md  igvm_image.md  rudra.md  secure_boot.md  secure_boot_guide.md  static_analyzer.md  tdshim_spec.md  test_code_coverage.md  test_heap_stack_usage.md  test_in_no_std.md  test_with_td_payload.md  threat_model.md  unit_test_coverage.md
elf-loader/: Cargo.toml
fake/: Cargo.toml
no_std_test/: Cargo.toml
no_std_test/src/: main.rs
pe-loader/: Cargo.toml
pe-loader/src/: lib.rs  pe.rs
r-uefi-pi/: Cargo.toml
rust-paging/: Cargo.toml  x86_64-custom.json
rust-paging/src/: consts.rs  frame.rs  lib.rs  page_table.rs  paging.rs
rust-td-layout/: .gitignore  Cargo.toml  build.rs
rust-td-layout/etc/: config.json
rust-td-layout/src/: lib.rs  mailbox.rs  metadata.rs
rust-td-payload/: Cargo.toml  target.json
rust-td-payload/src/: main.rs  memslice.rs  stack.rs
rust-td-payload/src/asm/: cet_ss_test.asm  stack_guard_test.asm
rust-td-tool/: .gitignore  Cargo.toml
rust-td-tool/src/: main.rs
rust-tdpayload-signing/: Cargo.toml  readme.md
rust-tdpayload-signing/src/: main.rs  signer.rs
rust-tdshim/: Cargo.toml  build.rs
rust-tdshim-key-enroll/: Cargo.toml  readme.md
rust-tdshim/ResetVector/: Main.asm  ResetVector.nasm  SerialDebug.asm
rust-tdshim/ResetVector/Ia32/: ReloadFlat32.asm  ResetVectorVtf0.asm
rust-tdshim/src/: acpi.rs  cet_ss.rs  e820.rs  event_log.rs  heap.rs  ipl.rs  lib.rs  main.rs  memory.rs  memslice.rs  mp.rs  stack_guard.rs  tcg.rs  verifier.rs  verify.rs
rust-tdshim/src/linux/: boot.rs  kernel_param.rs
rust-tdshim/src/td/: mod.rs  tdx.rs  tdx_mailbox.rs
rust-test-payload/: Cargo.toml  x86_64-custom.json
rust-test-payload/src/: lib.rs  main.rs  memslice.rs  tdcall.rs  tdinfo.rs
sample_key/: rsa-3072-private.pk8  rsa-3072-public.der
sh_script/: build_final.sh  (+10 more)
td-exception/: Cargo.toml
td-exception/src/: idt.rs  interrupt.rs  lib.rs
td-exception/src/asm/: handler.asm  mod.rs
td-layout/: Cargo.toml
td-layout/src/: build_time.rs  lib.rs  mailbox.rs  memslice.rs  metadata.rs  runtime.rs
td-layout/src/runtime/: exec.rs  linux.rs  mod.rs
td-loader/: Cargo.toml
td-loader/fuzz/: Cargo.toml
td-loader/fuzz/fuzz_targets/: afl_elf.rs  afl_pe.rs  elf.rs  fuzzlib.rs  pe.rs
td-loader/fuzz/seeds/pe/: td-shim.efi
td-loader/src/: elf.rs  elf64.rs  lib.rs  pe.rs
td-logger/: Cargo.toml
td-logger/src/: lib.rs  logger.rs
td-paging/: Cargo.toml
td-paging/src/: consts.rs  frame.rs  lib.rs  page_table.rs
td-payload/: Cargo.toml  x86_64-custom.json
td-payload/src/: acpi.rs  console.rs  event.rs  hob.rs  json.rs  lib.rs  main.rs  mp.rs  serial.rs
td-payload/src/arch/: mod.rs
td-payload/src/arch/x86_64/: apic.rs  cet.rs  gdt.rs  guard_page.rs  idt.rs  init.rs  mod.rs  paging.rs  serial.rs  shared.rs
td-payload/src/asm/: mod.rs
td-payload/src/mm/: dma.rs  heap.rs  layout.rs  mod.rs  page_table.rs  shared.rs
td-reproducible-tool/: Cargo.toml  readme.md
td-reproducible-tool/src/: main.rs
td-shim/: .gitignore  Cargo.toml  build.rs
td-shim-enroll-key/: Cargo.toml  README.md
td-shim-enroll-key/src/: lib.rs  main.rs  public_key.rs
td-shim-interface/: Cargo.toml  README.md
td-shim-interface/fuzz/: Cargo.toml
td-shim-interface/fuzz/fuzz_targets/: fuzzlib.rs
td-shim-interface/fuzz/seeds/hob_parser/: hob_buffer
td-shim-interface/src/: acpi.rs  lib.rs  loader.rs  metadata.rs
td-shim-interface/src/fuzz/fuzz_targets/: afl_cfv_parser.rs  afl_payload_parser.rs
td-shim-interface/src/fuzz/seeds/payload_parser/: fv_buffer
td-shim-interface/src/td_uefi_pi/: fv.rs  hob.rs  mod.rs
td-shim-interface/src/td_uefi_pi/pi/: fv.rs  guid.rs  mod.rs
td-shim-ld/: Cargo.toml
td-shim-ld/src/: lib.rs  main.rs
td-shim-sign-payload/: Cargo.toml  README.md
td-shim-sign-payload/src/: lib.rs  main.rs
td-shim-tools/: Cargo.toml
td-shim-tools/etc/: sample_metadata.json
td-shim-tools/src/: enroller.rs  lib.rs  linker.rs  loader.rs  metadata.rs  read_file.rs  signer.rs  tee_info_hash.rs
td-shim-tools/src/layout_builder/: image.rs  layout.rs  layout.rs.jinja  mod.rs  parse_json.rs  parse_layout_config.rs  region.rs  render.rs
td-shim-tools/src/layout_builder/template/: image.jinja
td-shim/ResetVector/: .gitignore  CommonMacros.inc  Main.asm  Port80Debug.asm  PostCodes.inc
td-shim/ResetVector/Ia32/: Flat32ToFlat64.asm  ResetVectorVtf0.asm  ValidateBfvBase.asm
td-shim/ResetVector/X64/: PageTables.asm  TestHob.asm
td-shim/fuzz/: Cargo.toml
td-shim/fuzz/fuzz_targets/: afl_secure_boot_cfv.rs  afl_secure_boot_payload.rs  fuzzlib.rs  secure_boot_cfv.rs  secure_boot_payload.rs
td-shim/fuzz/seeds/payload/: td-payload-signed
td-shim/src/: acpi.rs  e820.rs  event_log.rs  fv.rs  lib.rs  metadata.rs  reset_vector.rs  secure_boot.rs
tdx-bootstrap/: Cargo.toml  build.rs
tdx-bootstrap/ResetVector/: DebugDisabled.asm  Main.asm  ResetVector.nasm
tdx-bootstrap/ResetVector/Ia32/: Flat32ToFlat64.asm  ReloadFlat32.asm
tdx-bootstrap/ResetVector/X64/: PageTables.asm
tdx-bootstrap/src/: lib.rs
tdx-exception/: Cargo.toml
tdx-exception/src/: idt.rs
tdx-exception/src/asm/: idt.asm
tdx-tdcall/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
tdx-tdcall/src/: lib.rs  tdcall.rs  tdreport.rs  tdvmcall.rs  tdx.rs
tdx-tdcall/src/asm/: mod.rs  tdcall.asm  tdcall_emu.asm  tdvmcall.asm  tdvmcall_emu.asm  tdvmcall_ex.asm
uefi-pi/: Cargo.toml
uefi-pi/fuzz/: Cargo.toml
uefi-pi/fuzz/fuzz_targets/: fv_parser.rs  hob_parser.rs
uefi-pi/src/: fv.rs  fv_lib.rs  hob.rs  hob_lib.rs  lib.rs
uefi-pi/src/pi/: boot_mode.rs  fv.rs  hob.rs
(+119 files in other folders)
