[workspace]
resolver = "2"
default-members = ["fake"]
members = [
	"fake",
	"devtools/td-layout-config",
	"devtools/test-runner-client",
	"devtools/test-runner-server",
	"td-layout",
	"td-logger",
	"td-paging",
	"td-uefi-pi",
	"tdx-tdcall",
]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort"    # disable stack unwinding on panic
lto = true         # Link-time optimization
