[workspace]
default-members = ["td-shim", "td-payload"]
members = [
    "devtools/td-layout-config",
    "devtools/td-benchmark",
    "devtools/test-runner-server",
    "devtools/test-runner-client",
    "td-exception",
    "td-layout",
    "td-logger",
    "td-paging",
    "td-payload",
    "td-shim",
    "td-shim-tools",
    "tdx-tdcall",
    "tests/test-td-exception",
    "tests/test-td-paging",
    "tests/test-td-payload",
]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort"    # disable stack unwinding on panic
lto = true         # Link-time optimization
