[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.9.0"
log = "0.4.13"
td-layout = { path = "../td-layout" }
scroll = { version = "0.10", default-features = false, features = ["derive"]}
x86 = "0.41.0"
