[package]
name = "cc-measurement"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.6", default-features = false, features = ["force-soft"], optional = true }
ring = { version = "0.17.14", default-features = false, features = ["alloc"], optional = true }
zerocopy = { version = "0.7.31", features = ["derive"] }

[features]
default = ["sha2"]
