[package]
name = "no_std_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
runner-utils = "0.0.2" # small helper functions for custom runners (e.g. timeouts)
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`
