[package]
name = "pe-loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
scroll = { version = "0.10", default-features = false, features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
