[package]
name = "paging"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
x86 = "0.41.0"
x86_64 = "=0.14.6"
log = "0.4.13"
rust-td-layout = { path = "../rust-td-layout" }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
test_lib = { path = "../test_lib" }
spin = "0.9.2"
bootloader = "=0.10.9"

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursively = true
