[package]
name = "paging"
version = "0.1.0"
description = "A simple page table manager"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
edition = "2018"
license = "BSD-2-Clause-Patent"

[dependencies]
bitfield = "0.13.2"
x86 = "0.41.0"
x86_64 = "=0.14.6"
log = "0.4.13"
rust-td-layout = { path = "../rust-td-layout" }
test_lib = { path = "../test_lib" }
spin = "0.9.2"
bootloader = "=0.10.9"

[package.metadata.bootloader]
map-physical-memory = true
map-page-table-recursively = true
