[package]
name = "rust-td-layout"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
boot-kernel = []

[dependencies]
scroll = { version = "0.10", default-features = false, features = ["derive"]}
log = "0.4.13"

[dev-dependencies]
memoffset = "0.6"

[build-dependencies]
json5 = "0.3.0"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
