[package]
name = "rust-td-tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
boot-kernel = ["rust-td-layout/boot-kernel"]

[dependencies]
r-efi = "3.2.0"
r-uefi-pi =  { path = "../r-uefi-pi" }
pe-loader = { path = "../pe-loader" }
rust-td-layout = { path = "../rust-td-layout" }
env_logger = "0.9.0"
scroll = { version = "0.10", default-features=false }
log = "^0.4.5"
