[package]
name = "rust-tdshim"
version = "0.1.0"
edition = "2018"

# add build process
build = "build.rs"

[features]
cet-ss = []
secure-boot = []
boot-kernel = ["td-layout/boot-kernel"]

[build-dependencies]
cc = { git = "https://github.com/jyao1/cc-rs.git", branch = "uefi_support" }
td-layout = { path = "../td-layout" }
tdx-tdcall = { path = "../tdx-tdcall" }

[dependencies]
r-efi = "3.2.0"
linked_list_allocator = "0.9.0"
log = "0.4.13"
elf-loader = { path = "../elf-loader" }
pe-loader = { path = "../pe-loader" }
uefi-pi =  { path = "../uefi-pi" }
tdx-tdcall = { path = "../tdx-tdcall" }
tdx-logger =  { path = "../tdx-logger" }
td-exception =  { path = "../td-exception", features = ["tdx"] }
td-layout = { path = "../td-layout" }
td-paging = { path = "../td-paging" }
ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
scroll = { version = "0.10", default-features = false, features = ["derive"] }
x86_64 = "=0.14.6"
x86 = "0.43.0"
spin = "0.9.2"
bitflags = "1.2.1"
zerocopy = "0.6.0"
der = {version = "0.4.5", features = ["derive", "alloc"]}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
