[package]
name = "td-exception"
version = "0.1.0"
description = "Setup Interrupt Descriptor Table for td-shim"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "Apache 2.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = "0.4.13"
tdx-tdcall =  { path = "../tdx-tdcall", optional = true }
x86_64 = "0.14.9"

[features]
tdx = ["tdx-tdcall"]
integration-test = []
