[package]
name = "td-layout"
version = "0.1.0"
description = "Define build time and runtime layout for trusted domain"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[features]

[dependencies]
scroll = { version = "0.10", default-features = false, features = ["derive"]}
log = "0.4.13"
td-shim-interface =  { path = "../td-shim-interface" }

[dev-dependencies]
memoffset = "0.6"