[package]
name = "td-logger"
version = "0.1.0"
description = "Simple logger backend for td-shim"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = { version = "0.4.13", features = ["max_level_info", "release_max_level_info"] }
spin = "0.9.2"
tdx-tdcall = { path = "../tdx-tdcall", optional = true }
# Lock down to 0.44, otherwise it depends on inline asm
x86 = { version = "0.47.0", optional = true }

[features]
tdvmcall = ["tdx-tdcall/tdvmcall"]
serial-port = ["x86"]
