[package]
name = "td-paging"
version = "0.1.0"
description = "A simple page table manager"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
bitfield = "0.13.2"
x86 = "0.41.0"
x86_64 = "=0.14.6"
log = "0.4.13"
td-layout = { path = "../td-layout" }
spin = "0.9.2"
