[package]
name = "td-paging"
version = "0.1.0"
description = "A simple page table manager"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2021"

[dependencies]
bitfield = "0.13.2"
log = "0.4.13"
spin = "0.9.2"
td-layout = { path = "../td-layout" }
# Lock down to 0.44, otherwise it depends on inline asm
x86 = "0.47.0"
x86_64 = "0.14.9"
