[package]
name = "td-payload"
version = "0.1.0"
description = "A sample TD module/driver for TDX hardware platforms"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
td-benchmark = { path = "../devtools/td-benchmark", optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["serde"]}
linked_list_allocator = "0.9.0"
log = "0.4.13"
r-efi = "3.2.0"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
td-layout = { path = "../td-layout" }
tdx-tdcall = { path = "../tdx-tdcall", optional = true }
tdx-logger =  { path = "../tdx-logger", optional = true }
uefi-pi =  { path = "../uefi-pi" }

[features]
default = []
cet-ss = []
benches = ["td-benchmark"]
tdx = ["tdx-tdcall", "tdx-logger"]
