[package]
name = "td-payload"
version = "0.1.0"
description = "A sample TD module/driver for TDX hardware platforms"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[[bin]]
name = "example"
required-features = ["start"]

[dependencies]
bit_field = "0.10"
linked_list_allocator = "0.10"
lazy_static = "1.0"
log = "0.4.13"
r-efi = "3.2.0"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin = "0.9"
td-layout = { path = "../td-layout" }
td-logger =  { path = "../td-logger" }
td-shim = { path = "../td-shim", default-features = false }
td-uefi-pi =  { path = "../td-uefi-pi" }
td-exception =  { path = "../td-exception" }
td-paging =  { path = "../td-paging" }
x86 = "0.47.0"
x86_64 = "0.14"

td-benchmark = { path = "../devtools/td-benchmark", optional = true }
tdx-tdcall = { path = "../tdx-tdcall", optional = true }
zerocopy = "0.6.0"

[features]
default = ["tdx"]
tdx = ["tdx-tdcall", "td-logger/tdx", "td-exception/tdx"]
stack-guard = []
cet-shstk = []
cet-ibt = []
acpi = []
start = []
