[package]
name = "td-reproducible-tool"
version = "0.1.0"
description = "A tool modify compiled binary to keep reproducible"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
argparse = "0.2.2"
zeroize = "1.5.4"
regex = "1"