[package]
name = "td-shim-enroll-key"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"]}
scroll = { version = "0.10", default-features = false, features = ["derive"]}
der = { version = "0.4.5", features = ["oid"]}
r-efi = "3.2.0"
uefi-pi =  { path = "../uefi-pi" }
r-uefi-pi =  { path = "../r-uefi-pi" }
td-layout = { path = "../td-layout" }
