[package]
name = "td-shim-enroll-key"
version = "0.1.0"
description = "Enroll hash of a DER encoded public key into the Configuration Firmware Volume"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[features]
default = ["enroller"]
enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim-ld/linker"]

[dependencies]
r-efi = "3.2.0"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
td-layout = { path = "../td-layout" }
td-shim-ld = { path = "../td-shim-ld", default-features = false }
uefi-pi =  { path = "../uefi-pi" }

clap = { version = "3.0", features = ["cargo"], optional = true }
der = { version = "0.4.5", features = ["oid"], optional = true }
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4.5", optional = true }
ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
