[package]
name = "td-shim-tools"
version = "0.1.0"
description = "A set of tools to manipulate td-shim binary"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[[bin]]
name = "td-shim-enroll"
required-features = ["enroller"]

[[bin]]
name = "td-shim-ld"
required-features = ["linker"]

[[bin]]
name = "td-shim-sign-payload"
required-features = ["signer"]

[[bin]]
name = "td-shim-checker"
required-features = ["loader"]

[[bin]]
name = "td-shim-strip-info"

[[bin]]
name = "td-shim-tee-info-hash"
required-features = ["tee"]

[dependencies]
r-efi = "3.2.0"
argparse = "0.2.2"
zeroize = "1.5.4"
regex = "1"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
td-layout = { path = "../td-layout" }
td-shim = { path = "../td-shim", default-features = false }
td-uefi-pi =  { path = "../td-uefi-pi" }

clap = { version = "3.0", features = ["cargo"], optional = true }
der = { version = "0.4.5", features = ["oid"], optional = true }
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4.5", optional = true }
td-loader = { path = "../td-loader", optional = true }
ring = { git = "https://github.com/jyao1/ring.git", branch = "uefi_support", default-features = false, features = ["alloc"], optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", features = ["serde"], optional = true }
sha2 = { version = "0.10.2", optional = true }
byteorder = { version = "1.4.3", optional = true }

[features]
default = ["boot-kernel", "enroller", "linker", "signer", "loader", "tee"]
boot-kernel = ["td-layout/boot-kernel", "td-shim/boot-kernel"]
enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
linker = ["clap", "env_logger", "log", "td-loader"]
signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
loader = ["clap", "env_logger", "log"]
tee = ["clap", "env_logger", "log", "serde_json", "serde", "hex", "sha2", "byteorder"]