[package]
name = "td-shim-tools"
version = "0.1.0"
description = "A set of tools to manipulate td-shim binary"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[[bin]]
name = "td-shim-enroll"
required-features = ["enroller"]

[[bin]]
name = "td-shim-ld"
required-features = ["linker"]

[[bin]]
name = "td-shim-sign-payload"
required-features = ["signer"]

[[bin]]
name = "td-shim-checker"
required-features = ["loader"]

[[bin]]
name = "td-shim-strip-info"

[[bin]]
name = "td-shim-tee-info-hash"
required-features = ["tee"]

[[bin]]
name = "td-payload-reference-calculator"
required-features = ["calculator"]

[dependencies]
r-efi = "3.2.0"
argparse = "0.2.2"
zeroize = "1.5.4"
regex = "1"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
td-layout = { path = "../td-layout" }
td-shim = { path = "../td-shim", default-features = false }
td-shim-interface =  { path = "../td-shim-interface" }
cfg-if = "1.0"

anyhow = { version = "1.0.68", optional = true }
block-padding = { version = "0.3.2", optional = true }
clap = { version = "4.0", features = ["cargo"], optional = true }
der = { version = "0.4.5", features = ["oid"], optional = true }
env_logger = { version = "0.10", optional = true }
log = { version = "0.4.5", optional = true }
td-loader = { path = "../td-loader", optional = true }
ring = { version = "0.17.14", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", features = ["serde"], optional = true }
sha2 = { version = "0.10.2", optional = true }
byteorder = { version = "1.4.3", optional = true }
parse_int = { version = "0.6.0", optional = true }
igvm = "0.3.4"
igvm_defs = "0.3.4"
zerocopy = { version = "0.8.14", features = ["derive"]}

[features]
default = ["enroller", "linker", "signer", "loader", "tee", "calculator"]
enroller = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
linker = ["clap", "env_logger", "log", "parse_int", "serde_json", "serde", "td-loader"]
signer = ["clap", "der", "env_logger", "log", "ring", "td-shim/secure-boot"]
loader = ["clap", "env_logger", "log", "anyhow"]
tee = ["clap", "env_logger", "log", "serde_json", "serde", "hex", "sha2", "byteorder"]
calculator = ["clap", "hex", "parse_int", "sha2", "anyhow", "block-padding"]
exec-payload-section = []
no-config = []
