[package]
name = "td-shim"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2018"

# add build process
build = "build.rs"

[[bin]]
name = "td-shim"
required-features = ["main"]

[build-dependencies]
anyhow = "1.0.55"
cc = "1.0"
td-layout = { path = "../td-layout" }
tdx-tdcall = { path = "../tdx-tdcall" }
which = "4.2.4"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
r-efi = "3.2.0"
scroll = { version = "0.10", default-features = false, features = ["derive"] }
td-layout = { path = "../td-layout" }
td-uefi-pi =  { path = "../td-uefi-pi" }
cc-measurement = { path = "../cc-measurement" }
zerocopy = "0.6.0"

td-loader = { path = "../td-loader", optional = true }
linked_list_allocator = { version = "0.10", optional = true }
log = { version = "0.4.13", features = [], optional = true }
ring = { path = "../library/ring", default-features = false, features = ["alloc"], optional = true }
spin = { version = "0.9.2", optional = true }
td-exception =  { path = "../td-exception", features = ["tdx"], optional = true }
td-logger =  { path = "../td-logger", optional = true }
td-paging = { path = "../td-paging", optional = true }
x86 = { version ="0.47.0", optional = true }
# Lock down to 0.44, otherwise it depends on inline asm
x86_64 = { version = "0.14.9", optional = true }

# secure boot
der = {version = "0.4.5", features = ["derive", "alloc"], optional = true}

# TDX
tdx-tdcall = { path = "../tdx-tdcall", optional = true }

[features]
default = ["boot-kernel", "secure-boot"]
boot-kernel = ["td-layout/boot-kernel"]
secure-boot = ["der", "ring"]
tdx = ["tdx-tdcall", "td-exception/tdx", "td-logger/tdx", "x86"]
lazy-accept = ["tdx"]
ring-hash = ["cc-measurement/ring"]
sha2-hash = ["cc-measurement/sha2"]
main = [
    "log",
    "td-loader",
    "linked_list_allocator",
    "spin",
    "td-exception",
    "td-logger",
    "td-paging",
    "x86",
    "x86_64",
]
